@@ -133,7 +133,7 @@ class LineageRepositoryTest {
   @Test
   void testValidateLineageDetails_AllValidColumns_NoFiltering() {
     Set<String> fromColumns = new HashSet<>(Arrays.asList("column1", "column2"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn1"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn1"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
@@ -169,13 +169,13 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_InvalidToColumn_FiltersOutColumnLineage() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("column1"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("differentColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("column1"));
+    Set<String> toColumns = new HashSet<>(List.of("differentColumn"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
         new ColumnLineage()
-            .withFromColumns(Arrays.asList("database.schema.fromTable.column1"))
+            .withFromColumns(List.of("database.schema.fromTable.column1"))
             .withToColumn("database.schema.toTable.invalidColumn");
     columnLineages.add(columnLineage);
 
@@ -193,8 +193,8 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_InvalidFromColumns_FiltersOutInvalidColumns() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("validColumn"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("validColumn"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
@@ -226,8 +226,8 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_AllFromColumnsInvalid_RemovesEntireColumnLineage() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("otherColumn"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("otherColumn"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
@@ -261,13 +261,13 @@ class LineageRepositoryTest {
     // Valid column lineage
     ColumnLineage validLineage =
         new ColumnLineage()
-            .withFromColumns(Arrays.asList("database.schema.fromTable.column1"))
+            .withFromColumns(List.of("database.schema.fromTable.column1"))
             .withToColumn("database.schema.toTable.targetColumn1");
 
     // Invalid toColumn lineage (should be filtered out)
     ColumnLineage invalidToLineage =
         new ColumnLineage()
-            .withFromColumns(Arrays.asList("database.schema.fromTable.column2"))
+            .withFromColumns(List.of("database.schema.fromTable.column2"))
             .withToColumn("database.schema.toTable.invalidTarget");
 
     // Partially valid fromColumns lineage
@@ -315,8 +315,8 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_EmptyFromColumns_RemovesColumnLineage() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("column1"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("column1"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
@@ -339,8 +339,8 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_PreservesOtherLineageDetailsFields() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("column1"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("column1"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     // Setup lineage details with additional fields
     LineageDetails details =
@@ -355,7 +355,7 @@ class LineageRepositoryTest {
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
         new ColumnLineage()
-            .withFromColumns(Arrays.asList("database.schema.fromTable.column1"))
+            .withFromColumns(List.of("database.schema.fromTable.column1"))
             .withToColumn("database.schema.toTable.targetColumn");
     columnLineages.add(columnLineage);
     details.setColumnsLineage(columnLineages);
@@ -375,7 +375,7 @@ class LineageRepositoryTest {
   @Test
   void testValidateLineageDetails_ColumnNamesWithoutFQNPrefix() {
     Set<String> fromColumns = new HashSet<>(Arrays.asList("column1", "column2"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     List<ColumnLineage> columnLineages = new ArrayList<>();
     ColumnLineage columnLineage =
@@ -400,8 +400,8 @@ class LineageRepositoryTest {
 
   @Test
   void testValidateLineageDetails_ModifiesOriginalColumnLineageList() {
-    Set<String> fromColumns = new HashSet<>(Arrays.asList("validColumn"));
-    Set<String> toColumns = new HashSet<>(Arrays.asList("targetColumn"));
+    Set<String> fromColumns = new HashSet<>(List.of("validColumn"));
+    Set<String> toColumns = new HashSet<>(List.of("targetColumn"));
 
     // Create original column lineage with invalid columns
     List<String> originalFromColumns =
